--- a/Resources/Prototypes/_CP14/Entities/Structures/Flora/Gatherable/wild.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Flora/Gatherable/wild.yml
@@ -208,6 +208,8 @@
           !type:DamageTrigger
           damage: 100
         behaviors:
+        - !type:DoActsBehavior
+          acts: ["Destruction"]
       - trigger:
           !type:DamageTrigger
           damage: 20
