--- a/Resources/Prototypes/_CP14/Entities/Structures/crystal.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/crystal.yml
@@ -23,18 +23,24 @@
     thresholds:
       - trigger:
           !type:DamageTrigger
-          damage: 20
+          damage: 80
+        behaviors:
+          - !type:DoActsBehavior
+            acts: [ "Destruction" ]
+      - trigger:
+            !type:DamageTrigger
+            damage: 20
         behaviors:
           - !type:PlaySoundBehavior
             sound:
               collection: GlassBreak
-          - !type:DoActsBehavior
-            acts: [ "Destruction" ]
           - !type:SpawnEntitiesBehavior
             spawn:
               CP14QuartzShard:
                 min: 0
                 max: 1
+            - !type:DoActsBehavior
+            acts: [ "Destruction" ]
   - type: Fixtures
     fixtures:
       fix1:
