--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/exterier_room.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/exterier_room.yml
@@ -8,6 +8,7 @@
   name: Demiplan ruins room spawner
   components:
   - type: RoomFill
+    clearExisting: true
     roomWhitelist:
       tags:
       - CP14DemiplanRuins
