--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/enter_room.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/enter_room.yml
@@ -8,6 +8,7 @@
   name: Demiplan enter room marker
   components:
   - type: RoomFill
+    clearExisting: true
     roomWhitelist:
       tags:
       - CP14DemiplanEnterRoom
