--- a/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks_cups.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks_cups.yml
@@ -55,7 +55,7 @@
     price: 125
 
 - type: entity
-  parent: DrinkBaseCup
+  parent: CP14VialSmall
   id: DrinkBaseMug
   abstract: true
   name: mug
