refactor magic system

--- a/Resources/Prototypes/_CP14/Entities/Clothing/Rings/ring.yml
+++ b/Resources/Prototypes/_CP14/Entities/Clothing/Rings/ring.yml
@@ -11,6 +11,11 @@
     - ring
   - type: Sprite
     sprite: _CP14/Clothing/Rings/rings.rsi
+  - type: CP14MagicEnergyExaminable
+  - type: CP14MagicEnergyContainer
+    energy: 50
+    maxEnergy: 50
+  - type: CP14MagicUnsafeDamage
 
 - type: entity
   id: CP14ClothingRingIceDagger
