--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Fire/T0_flame_creation.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Fire/T0_flame_creation.yml
@@ -138,3 +138,12 @@
   - type: IgnitionSource
     temperature: 400
     ignited: true
+
+- type: entity
+  parent: CP14BaseSpellScrollFire
+  id: CP14SpellScrollFlameCreation
+  name: flame creation spell scroll
+  components:
+  - type: CP14SpellStorage
+    spells:
+    - CP14ActionSpellFlameCreation
