--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T1_ice_shards.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T1_ice_shards.yml
@@ -66,3 +66,12 @@
     layers:
     - state: shard
       shader: unshaded
+
+- type: entity
+  parent: CP14BaseSpellScrollWater
+  id: CP14SpellScrollIceShards
+  name: ice shards spell scroll
+  components:
+  - type: CP14SpellStorage
+    spells:
+    - CP14ActionSpellIceShards
