--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Fire/T1_fireball.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Fire/T1_fireball.yml
@@ -93,3 +93,12 @@
     intensitySlope: 1
     maxIntensity: 6
     canCreateVacuum: false
+
+- type: entity
+  parent: CP14BaseSpellScrollFire
+  id: CP14SpellScrollFireball
+  name: fireball spell scroll
+  components:
+  - type: CP14SpellStorage
+    spells:
+    - CP14ActionSpellFireball
