--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -126,6 +126,7 @@ CP14ClothingRingIceFloor: CP14ClothingRingManaGift
 
 #2024-11-05
 CP14ClothingRingCureWounds: CP14MagicHealingStaff
+CP14ClothingRingShadowStep: CP14ClothingRingManaGift
 
 # <---> CrystallPunk migration zone end
 
