Revert "не то жмал"

--- a/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks_cups.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks_cups.yml
@@ -56,7 +56,7 @@
 
 - type: entity
   parent: CP14VialSmall
-  id: CP14BaseVial
+  id: DrinkBaseMug
   abstract: true
   name: mug
   description: A mug.
