--- a/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Magic/twoHandedStaffs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Magic/twoHandedStaffs.yml
@@ -44,6 +44,7 @@
   - type: CP14SpellStorage
     spells:
     - CP14ActionSpellCureWounds
+    - CP14ActionSpellResurrection
   #- type: CP14MagicManacostModify
   #  modifiers:
   #   Healing: 1.1
