--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Necromancy/T1_resurrection.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Necromancy/T1_resurrection.yml
@@ -1,43 +1,41 @@
 - type: entity
-  id: CP14ActionSpellCureWounds
-  name: Cure wounds
-  description: You touch the creature, healing its body from physical damage
+  id: CP14ActionSpellResurrection
+  name: Resurrection
+  description: You're trying to put the soul back into the body.
   components:
   - type: CP14MagicEffectCastSlowdown
-    speedMultiplier: 0.5
+    speedMultiplier: 0.2
   - type: CP14MagicEffect
-    magicType: Healing
-    manaCost: 20
+    magicType: Necromancy
+    manaCost: 100
     telegraphyEffects:
     - !type:CP14SpellSpawnEntityOnTarget
       spawns:
-      - CP14ImpactEffectCureWounds
+      - CP14ImpactEffectResurrection
     effects:
     - !type:CP14SpellSpawnEntityOnTarget
       spawns:
-      - CP14ImpactEffectCureWounds
+      - CP14ImpactEffectResurrection
+    - !type:CP14SpellResurrectionEffect
     - !type:CP14SpellApplyEntityEffect
       effects:
+      - !type:ChemVomit
+        probability: 0.25
+      - !type:Emote
+        showInChat: false
+        emote: Cough
+        probability: 0.3
       - !type:HealthChange
         damage:
           types:
-            Slash: -10
-            Blunt: -10
-            Piercing: -10
-            Poison: -10
-            Caustic: -10
-            Cold: -10
-            Heat: -10
-            Shock: -10
+            Asphyxiation: -50
+            Bloodloss: -10
       - !type:Jitter
-      - !type:ModifyBleedAmount
-      - !type:ModifyBloodLevel
-        amount: 5
   - type: CP14MagicEffectVerbalAspect
-    startSpeech: "Et curabuntur..."
-    endSpeech: "vulnera tua"
+    startSpeech: "Redi animam meam..."
+    endSpeech: "Eu rezei por ti"
   - type: CP14MagicEffectCastingVisual
-    proto: CP14RuneCureWounds
+    proto: CP14RuneResurrection
   - type: EntityTargetAction
     whitelist:
       components:
@@ -45,18 +43,19 @@
     range: 7
     itemIconStyle: BigAction
     interactOnMiss: false
+    canTargetSelf: false
     sound: !type:SoundPathSpecifier
       path: /Audio/Magic/rumble.ogg
     icon:
       sprite: _CP14/Effects/Magic/spells_icons.rsi
-      state: cure_wounds
+      state: resurrection
     event: !type:CP14DelayedEntityTargetActionEvent
-      cooldown: 10
-      castDelay: 3
-      breakOnMove: false
- 
+      cooldown: 300
+      castDelay: 10
+      breakOnMove: true
+
 - type: entity
-  id: CP14RuneCureWounds
+  id: CP14RuneResurrection
   parent: CP14BaseMagicRune
   categories: [ HideSpawnMenu ]
   components:
@@ -65,25 +64,28 @@
   - type: Sprite
     layers:
     - state: sun
-      color: "#79b330"
+      color: "#366357"
+      shader: unshaded
+    - state: medium_circle
+      color: "#55877a"
       shader: unshaded
 
 - type: entity
-  id: CP14ImpactEffectCureWounds
+  id: CP14ImpactEffectResurrection
   parent: CP14BaseMagicImpact
   categories: [ HideSpawnMenu ]
   components:
   - type: Sprite
     layers:
-    - state: particles_up
-      color: "#79b330"
+    - state: wave_up
+      color: "#55877a"
       shader: unshaded
 
 - type: entity
-  parent: CP14BaseSpellScrollHealing
-  id: CP14SpellScrollCureWounds
-  name: cure wounds spell scroll
+  parent: CP14BaseSpellScrollNecromancy
+  id: CP14SpellScrollResurrection
+  name: resurrection spell scroll
   components:
   - type: CP14SpellStorage
     spells:
-    - CP14ActionSpellCureWounds
+    - CP14ActionSpellResurrection
