--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/Loot/spawners.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/Loot/spawners.yml
@@ -89,6 +89,7 @@
         - id: CP14ClothingRingManaGift
         - id: CP14ClothingRingSphereOfLight
         - id: CP14ClothingRingFlashLight
+        - id: CP14SpellScrollResurrection
       - !type:GroupSelector
         children:
         - id: CP14ClothingCloakArmoredRed
