--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_grassland_island_ring.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_grassland_island_ring.yml
@@ -1,8 +1,7 @@
 - type: cp14DemiplaneLocation
-  id: T1GrasslandIsland
-  locationConfig: CP14DemiplaneGrasslandIsland
+  id: T1GrasslandIslandRing
+  locationConfig: CP14DemiplaneGrasslandIslandRing
   tags:
-  - CP14DemiplaneCave
   - CP14DemiplaneOpenSky
   - CP14DemiplaneGrass
   components:
@@ -41,73 +40,89 @@
       color: '#120906FF'
 
 - type: dungeonConfig
-  id: CP14DemiplaneGrasslandIsland
+  id: CP14DemiplaneGrasslandIslandRing
   layers:
     # Masks
     - !type:PrototypeDunGen
-      proto: CP14DemiplaneGrasslandIslandFloorMaskSand
+      proto: CP14DemiplaneGrasslandIslandRingFloorMaskSand
     - !type:PrototypeDunGen
-      proto: CP14DemiplaneGrasslandIslandFloorMaskGrass
+      proto: CP14DemiplaneGrasslandIslandRingFloorMaskGrass
     - !type:PrototypeDunGen
-      proto: CP14DemiplaneGrasslandIslandFloorMaskStone
+      proto: CP14DemiplaneGrasslandIslandRingFloorMaskSand2
+    - !type:PrototypeDunGen
+      proto: CP14DemiplaneGrasslandIslandRingFloorMaskWater
     # Biomes
-    - !type:BiomeDunGen
-      biomeTemplate: CP14CavesGeneric
-      tileMask:
-      - CP14FloorBase
     - !type:BiomeDunGen
       biomeTemplate: CP14GrasslandTestResult
       tileMask:
       - CP14FloorGrass
 
 - type: dungeonConfig
-  id: CP14DemiplaneGrasslandIslandFloorMaskStone
+  id: CP14DemiplaneGrasslandIslandRingFloorMaskSand
   layers:
   - !type:NoiseDistanceDunGen
-    size: 110, 110
-    distanceConfig: !type:DunGenEuclideanSquaredDistance
-      blendWeight: 0.5
-    layers:
-    - tile: CP14FloorBase
-      threshold: 0.50
-      noise:
-        frequency: 0.010
-        noiseType: OpenSimplex2
-        fractalType: FBm
-        octaves: 5
-        lacunarity: 2
-        gain: 0.5
-
-- type: dungeonConfig
-  id: CP14DemiplaneGrasslandIslandFloorMaskGrass
-  layers:
-  - !type:NoiseDistanceDunGen
-    size: 150, 150
-    distanceConfig: !type:DunGenEuclideanSquaredDistance
-      blendWeight: 0.6
-    layers:
-    - tile: CP14FloorGrass
-      threshold: 0.50
-      noise:
-        frequency: 0.010
-        noiseType: OpenSimplex2
-        fractalType: FBm
-        octaves: 5
-        lacunarity: 2
-        gain: 0.5
-
-- type: dungeonConfig
-  id: CP14DemiplaneGrasslandIslandFloorMaskSand
-  layers:
-  - !type:NoiseDistanceDunGen
-    size: 160, 160
+    size: 210, 210
     distanceConfig: !type:DunGenEuclideanSquaredDistance
       blendWeight: 0.7
     layers:
     - tile: CP14FloorSand
       threshold: 0.50
       noise:
-        frequency: 0.010
+        frequency: 0.005
+        noiseType: OpenSimplex2
+        fractalType: FBm
+        octaves: 5
+        lacunarity: 2
+        gain: 0.5
+
+- type: dungeonConfig
+  id: CP14DemiplaneGrasslandIslandRingFloorMaskGrass
+  layers:
+  - !type:NoiseDistanceDunGen
+    size: 190, 190
+    distanceConfig: !type:DunGenEuclideanSquaredDistance
+      blendWeight: 0.7
+    layers:
+    - tile: CP14FloorGrass
+      threshold: 0.50
+      noise:
+        frequency: 0.005
+        noiseType: OpenSimplex2
+        fractalType: FBm
+        octaves: 5
+        lacunarity: 2
+        gain: 0.5
+
+- type: dungeonConfig
+  id: CP14DemiplaneGrasslandIslandRingFloorMaskSand2
+  layers:
+  - !type:NoiseDistanceDunGen
+    size: 120, 120
+    distanceConfig: !type:DunGenEuclideanSquaredDistance
+      blendWeight: 0.7
+    layers:
+    - tile: CP14FloorSand
+      threshold: 0.50
+      noise:
+        frequency: 0.005
+        noiseType: OpenSimplex2
+        fractalType: FBm
+        octaves: 5
+        lacunarity: 2
+        gain: 0.5
+
+- type: dungeonConfig
+  id: CP14DemiplaneGrasslandIslandRingFloorMaskWater
+  layers:
+  - !type:NoiseDistanceDunGen
+    size: 110, 110
+    distanceConfig: !type:DunGenEuclideanSquaredDistance
+      blendWeight: 0.7
+    layers:
+    - tile: Space
+      threshold: 0.50
+      noise:
+        frequency: 0.005
         noiseType: OpenSimplex2
         fractalType: FBm
         octaves: 5
