Update drinks_cups.yml (#570)
* Update drinks_cups.yml

* Testing

* Revert "не то жмал"

* Пришлось мне пройти через это

* mug -> vial

* test

* Делаем мир легче

--- a/Resources/Prototypes/_CP14/Entities/Objects/Specific/Alchemy/vials.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Specific/Alchemy/vials.yml
@@ -37,6 +37,8 @@
         type: TransferAmountBoundUserInterface
   - type: Drink
     solution: vial
+  - type: Spillable
+    solution: vial
   - type: Appearance
   - type: Damageable
     damageContainer: Inorganic
