--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_caves_ring.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_caves_ring.yml
@@ -1,74 +1,51 @@
 - type: cp14DemiplaneLocation
-  id: T1GrasslandIsland
-  locationConfig: CP14DemiplaneGrasslandIsland
+  id: T1CavesRing
+  locationConfig: CP14DemiplaneCavesRing
   tags:
   - CP14DemiplaneCave
-  - CP14DemiplaneOpenSky
-  - CP14DemiplaneGrass
+  - CP14DemiplaneUnderground
   components:
-  - type: MapLight
-    ambientLightColor: "#BFEEFFFF"
-  - type: CP14MapFloorOccluder
-  - type: Parallax
-    parallax: CP14Ocean
-  - type: CP14CloudShadows
   - type: CP14WeatherController
     entries:
-    - visuals: CP14Rain
-    - visuals: CP14Storm
     - visuals: CP14Mist
-  - type: CP14DayCycle
-    timeEntries:
-    - duration: 80
-      color: '#754A4AFF'
-    - duration: 80
-      color: '#E0BA87FF'
-    - duration: 80
-      color: '#BFEEFFFF'
-    - period: Night
-      duration: 80
-      color: '#385163FF'
-    - period: Night
-      duration: 80
-      color: '#060D12FF'
-    - period: Night
-      duration: 80
-      color: '#000000FF'
-    - period: Night
-      duration: 80
-      color: '#000000FF'
-    - duration: 80
-      color: '#120906FF'
 
 - type: dungeonConfig
-  id: CP14DemiplaneGrasslandIsland
+  id: CP14DemiplaneCavesRing
   layers:
     # Masks
     - !type:PrototypeDunGen
-      proto: CP14DemiplaneGrasslandIslandFloorMaskSand
+      proto: CP14DemiplanePlatingMaskBorder
     - !type:PrototypeDunGen
-      proto: CP14DemiplaneGrasslandIslandFloorMaskGrass
+      proto: CP14DemiplaneCavesRingFloorMaskStone
     - !type:PrototypeDunGen
-      proto: CP14DemiplaneGrasslandIslandFloorMaskStone
+      proto: CP14DemiplaneCavesRingFloorMaskAir
+    - !type:PrototypeDunGen
+      proto: CP14DemiplaneCavesRingFloorMaskStone2
+    - !type:PrototypeDunGen
+      proto: CP14DemiplaneCavesRingFloorMaskBorderCenter
     # Biomes
+    - !type:BiomeDunGen
+      biomeTemplate: CP14CavesIndestructibleFill
+      tileMask:
+      - Plating
     - !type:BiomeDunGen
       biomeTemplate: CP14CavesGeneric
       tileMask:
-      - CP14FloorBase
+      - CP14FloorSand
     - !type:BiomeDunGen
-      biomeTemplate: CP14GrasslandTestResult
+      biomeTemplate: CP14CavesFloor
       tileMask:
       - CP14FloorGrass
 
 - type: dungeonConfig
-  id: CP14DemiplaneGrasslandIslandFloorMaskStone
+  id: CP14DemiplaneCavesRingFloorMaskStone
   layers:
   - !type:NoiseDistanceDunGen
-    size: 110, 110
+    size: 120, 120
     distanceConfig: !type:DunGenEuclideanSquaredDistance
-      blendWeight: 0.5
+      blendWeight: 0.9
     layers:
-    - tile: CP14FloorBase
+    - tile: CP14FloorSand
       threshold: 0.50
       noise:
         frequency: 0.010
@@ -79,12 +56,12 @@
         gain: 0.5
 
 - type: dungeonConfig
-  id: CP14DemiplaneGrasslandIslandFloorMaskGrass
+  id: CP14DemiplaneCavesRingFloorMaskAir
   layers:
   - !type:NoiseDistanceDunGen
-    size: 150, 150
+    size: 110, 110
     distanceConfig: !type:DunGenEuclideanSquaredDistance
-      blendWeight: 0.6
+      blendWeight: 0.9
     layers:
     - tile: CP14FloorGrass
       threshold: 0.50
@@ -97,14 +74,32 @@
         gain: 0.5
 
 - type: dungeonConfig
-  id: CP14DemiplaneGrasslandIslandFloorMaskSand
+  id: CP14DemiplaneCavesRingFloorMaskStone2
   layers:
   - !type:NoiseDistanceDunGen
-    size: 160, 160
+    size: 80, 80
     distanceConfig: !type:DunGenEuclideanSquaredDistance
-      blendWeight: 0.7
+      blendWeight: 0.9
     layers:
     - tile: CP14FloorSand
+      threshold: 0.50
+      noise:
+        frequency: 0.010
+        noiseType: OpenSimplex2
+        fractalType: FBm
+        octaves: 5
+        lacunarity: 2
+        gain: 0.5
+
+- type: dungeonConfig
+  id: CP14DemiplaneCavesRingFloorMaskBorderCenter
+  layers:
+  - !type:NoiseDistanceDunGen
+    size: 50, 50
+    distanceConfig: !type:DunGenEuclideanSquaredDistance
+      blendWeight: 0.9
+    layers:
+    - tile: Plating
       threshold: 0.50
       noise:
         frequency: 0.010
