--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_caves.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_caves.yml
@@ -1,6 +1,7 @@
 - type: cp14DemiplaneLocation
   id: T1Caves
   locationConfig: CP14DemiplaneCaves
+  name: cp14-demiplane-location-cave
   tags:
   - CP14DemiplaneCave
   - CP14DemiplaneUnderground
