--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_caves_ring.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_caves_ring.yml
@@ -1,6 +1,7 @@
 - type: cp14DemiplaneLocation
   id: T1CavesRing
   locationConfig: CP14DemiplaneCavesRing
+  name: cp14-demiplane-location-cave
   tags:
   - CP14DemiplaneCave
   - CP14DemiplaneUnderground
