--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_grassland_island_ring.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_grassland_island_ring.yml
@@ -1,6 +1,7 @@
 - type: cp14DemiplaneLocation
   id: T1GrasslandIslandRing
   locationConfig: CP14DemiplaneGrasslandIslandRing
+  name: cp14-demiplane-location-grassland-island
   tags:
   - CP14DemiplaneOpenSky
   - CP14DemiplaneGrass
