--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/test.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/test.yml
@@ -1,5 +1,6 @@
 - type: cp14DemiplaneModifier
   id: GoldOre
+  name: cp14-modifier-gold-ore
   unique: false
   reward: 0.5
   requiredTags:
@@ -15,6 +16,7 @@
 
 - type: cp14DemiplaneModifier
   id: IronOre
+  name: cp14-modifier-iron-ore
   unique: false
   reward: 0.4
   requiredTags:
@@ -30,6 +32,7 @@
 
 - type: cp14DemiplaneModifier
   id: CopperOre
+  name: cp14-modifier-copper-ore
   unique: false
   reward: 0.3
   requiredTags:
@@ -45,6 +48,7 @@
 
 - type: cp14DemiplaneModifier
   id: QuartzCrystal
+  name: cp14-modifier-quartz-crystal
   reward: 0.1
   requiredTags:
   - CP14DemiplaneCave
@@ -59,6 +63,7 @@
 
 - type: cp14DemiplaneModifier
   id: QuartzCrystalRubies
+  name: cp14-modifier-quartz-crystal
   reward: 0.2
   generationWeight: 0.1
   requiredTags:
@@ -75,6 +80,7 @@
 
 - type: cp14DemiplaneModifier
   id: QuartzCrystalTopazes
+  name: cp14-modifier-quartz-crystal
   reward: 0.2
   generationWeight: 0.1
   requiredTags:
@@ -91,6 +97,7 @@
 
 - type: cp14DemiplaneModifier
   id: QuartzCrystalEmeralds
+  name: cp14-modifier-quartz-crystal
   reward: 0.2
   generationWeight: 0.1
   requiredTags:
@@ -109,6 +116,7 @@
 
 - type: cp14DemiplaneModifier
   id: QuartzCrystalSapphires
+  name: cp14-modifier-quartz-crystal
   reward: 0.2
   generationWeight: 0.1
   requiredTags:
@@ -127,6 +135,7 @@
 
 - type: cp14DemiplaneModifier
   id: QuartzCrystalAmethysts
+  name: cp14-modifier-quartz-crystal
   reward: 0.2
   generationWeight: 0.1
   requiredTags:
@@ -143,6 +152,7 @@
 
 - type: cp14DemiplaneModifier
   id: QuartzCrystalDiamonds
+  name: cp14-modifier-quartz-crystal
   reward: 0.2
   generationWeight: 0.1
   requiredTags:
@@ -160,6 +170,7 @@
 
 - type: cp14DemiplaneModifier
   id: Dayflin
+  name: cp14-modifier-dayflin
   reward: 0.2
   requiredTags:
   - CP14DemiplaneGrass
@@ -176,7 +187,26 @@
       maxGroupSize: 5
 
 - type: cp14DemiplaneModifier
+  id: FlyAgaric
+  name: cp14-modifier-fly-agaric
+  reward: 0.2
+  requiredTags:
+  - CP14DemiplaneGrass
+  layers:
+    - !type:OreDunGen
+      tileMask: 
+      - CP14FloorBase
+      - CP14FloorGrass
+      - CP14FloorGrassLight
+      - CP14FloorGrassTall
+      entity: CP14GatherableFlyAgaric
+      count: 10
+      minGroupSize: 3
+      maxGroupSize: 5
+
+- type: cp14DemiplaneModifier
   id: BlueAmanita
+  name: cp14-modifier-blue-amanita
   reward: 0.2
   requiredTags:
   - CP14DemiplaneGrass
@@ -193,6 +223,7 @@
 
 - type: cp14DemiplaneModifier
   id: BloodFlower
+  name: cp14-modifier-blood-flower
   reward: 0.2
   requiredTags:
   - CP14DemiplaneGrass
@@ -209,6 +240,7 @@
 
 - type: cp14DemiplaneModifier
   id: WildSage
+  name: cp14-modifier-wild-sage
   reward: 0.2
   requiredTags:
   - CP14DemiplaneGrass
@@ -226,6 +258,7 @@
 
 - type: cp14DemiplaneModifier
   id: LumiShroom
+  name: cp14-modifier-lumisroom
   reward: 0.2
   requiredTags:
   - CP14DemiplaneUnderground
@@ -243,6 +276,7 @@
 
 - type: cp14DemiplaneModifier
   id: Explosive
+  name: cp14-modifier-explosive
   difficulty: 0.4
   generationWeight: 0.25
   layers:
@@ -254,6 +288,7 @@
 
 - type: cp14DemiplaneModifier
   id: Ruins
+  name: cp14-modifier-ruins
   reward: 0.35
   generationWeight: 2
   layers:
@@ -265,6 +300,7 @@
 
 - type: cp14DemiplaneModifier
   id: EnemyXeno
+  name: cp14-modifier-xeno
   difficulty: 0.5
   requiredTags:
   - CP14DemiplaneUnderground
@@ -282,6 +318,7 @@
 
 - type: cp14DemiplaneModifier
   id: EnemyZombie
+  name: cp14-modifier-zombie
   difficulty: 0.4
   generationWeight: 1.5
   layers:
@@ -293,6 +330,7 @@
 
 - type: cp14DemiplaneModifier
   id: EnemyDyno
+  name: cp14-modifier-dyno
   difficulty: 0.5
   requiredTags:
   - CP14DemiplaneOpenSky
@@ -306,6 +344,7 @@
 
 - type: cp14DemiplaneModifier
   id: SmallHydra
+  name: cp14-modifier-dyno
   difficulty: 0.5
   requiredTags:
   - CP14DemiplaneGrass
@@ -318,7 +357,8 @@
 
 - type: cp14DemiplaneModifier
   id: EnemyMole
-  difficulty: 0.5
+  name: cp14-modifier-mole
+  difficulty: 0.4
   requiredTags:
   - CP14DemiplaneUnderground
   - CP14DemiplaneCave
@@ -327,23 +367,13 @@
       tileMask: 
       - CP14FloorBase
       entity: CP14MobMonsterMole
-      count: 5
+      count: 6
       minGroupSize: 1
-      maxGroupSize: 2
-
-- type: cp14DemiplaneModifier
-  id: EnemyMagmawind
-  difficulty: 0.3
-  generationWeight: 0.4
-  layers:
-    - !type:OreDunGen
-      entity: CP14MobWatcherMagmawing
-      count: 5
-      minGroupSize: 2
-      maxGroupSize: 3
+      maxGroupSize: 1
 
 - type: cp14DemiplaneModifier
   id: Rabbits
+  name: cp14-modifier-rabbits
   reward: 0.2
   generationWeight: 0.4
   requiredTags:
@@ -361,6 +391,7 @@
 
 - type: cp14DemiplaneModifier
   id: Boar
+  name: cp14-modifier-boars
   reward: 0.2
   difficulty: 0.2
   generationWeight: 0.4
@@ -379,6 +410,7 @@
 
 - type: cp14DemiplaneModifier
   id: Chasm
+  name: cp14-modifier-chasm
   difficulty: 0.2
   generationWeight: 0.6
   layers:
