--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/closets.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/closets.yml
@@ -54,6 +54,8 @@
     price: 50
   - type: Anchorable
   - type: Rotatable
+  - type: Transform
+    anchored: true
 
 - type: entity
   name: wooden closet
